test/spec_vectors/memory_copy/ok/module_91.wat
(module (memory 1 1) (func (export "test") (memory.copy (i32.const 131072) (i32.const 28672) (i32.const 0))))