test/spec_vectors/memory_copy/fail/module_28.wat
(module (memory 1 1) (func (export "testfn") (memory.copy (i32.const 10) (i64.const 20) (f32.const 30))))